# satelle

./: .coderabbit.yaml  .facts  .gitignore  .orchestration-state.md  .spec-gaps.md  CONTEXT.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  docs.yml  release.yml
crates/satelle-cli/: Cargo.toml
crates/satelle-cli/src/: bootstrap-lock.rs  command-history.rs  completions.rs  direct-attached.rs  error-output.rs  host-trust.rs  logs.rs  main.rs  output.rs  read.rs  ssh-bootstrap.rs  ssh-tunnel.rs  tailscale-serve.rs  tailscale.rs  transport-reconnect-tests.rs  transport-tests.rs  transport.rs
crates/satelle-cli/src/completions/: profile.rs
crates/satelle-cli/src/mcp/: arguments.rs  install.rs  mod.rs  output-schema.rs  result.rs  schema.rs  stdio.rs  tests.rs
crates/satelle-cli/tests/: cli-output-error-contract.rs  cli.rs  command-history.rs  completion-automation-contract.rs  completion-profiles.rs  completions.rs  config-profiles.rs  config-validation.rs  error-output-contract.rs  mcp.rs  output-format-contract.rs  project-host-binding.rs  release-archive-contract.rs  release-binary-contract.rs  report-schema-contract.rs  session-host-routing.rs
crates/satelle-cli/tests/support/: config-fixture.rs  test-file.rs
crates/satelle-core/: Cargo.toml
crates/satelle-core/src/: authority.rs  control-plane.rs  daemon-service.rs  direct-host-binding.rs  events.rs  ids.rs  lib.rs  profiles.rs  project-config.rs  secure-file.rs  session-public.rs  session.rs
crates/satelle-host/: Cargo.toml
crates/satelle-host/src/: api-auth.rs  attachment.rs  codex-approval.rs  codex-capabilities-tests.rs  codex-install.rs  codex-process.rs  codex-session-tests.rs  codex-session.rs  codex-turn-read.rs  codex_capabilities.rs  daemon-activity.rs  daemon-reconnect-tests.rs  daemon.rs  desktop-sessions.rs  lib-tests.rs  lib.rs  live-events.rs  log-page.rs  operation-capacity-tests.rs  operation-capacity.rs  process-identity.rs  provider-auth.rs  provider-probe.rs  runtime-adapter.rs  runtime-admission-tests.rs  runtime-codex-adapter.rs  runtime-codex-tests.rs  runtime-codex.rs  runtime-events.rs  runtime-model.rs  runtime-recovery.rs  runtime-request.rs  runtime-retention-tests.rs  runtime-stop.rs  runtime-tests.rs  runtime-worker.rs  runtime.rs  storage.rs  test-runtime.rs
crates/satelle-host/src/codex-session-tests/: approvals.rs
crates/satelle-host/src/runtime-tests/: control-plane.rs  review-regressions.rs
crates/satelle-host/src/storage/: 0001_initial.sql  0002_operational_evidence.sql  0003_native_readiness_results.sql  0004_provider_smoke_results.sql  0005_provider_probe_recovery.sql  0006_native_probe_recovery.sql  0007_setup_action_ledger.sql  0008_api_token_state.sql  0009_session_metadata.sql  0010_admission_cancellations.sql  0011_operation_classes.sql  0012_provider_descriptor_validation_replay.sql  auth.rs  backup-tests.rs  codec.rs  logs.rs  open.rs  operational.rs  operator-log.rs  retention.rs  setup_ledger.rs  sql.rs  stop.rs  tests.rs
crates/satelle-host/src/storage/open/: unix_vfs.rs  windows.rs
crates/satelle-host/src/storage/open/unix_vfs/: macos.rs
crates/satelle-host/src/storage/tests/: atomicity.rs  auth.rs  cancellation.rs  lifecycle.rs  logs.rs  operational.rs  retention.rs  security.rs  setup_ledger.rs
crates/satelle-host/src/storage/tests/security/: control-lease-process.rs
crates/satelle-host/src/test-runtime/: diagnostics.rs
crates/satelle-test-contract/: Cargo.toml
crates/satelle-test-contract/src/: lib.rs
crates/satelle-test-contract/tests/: architecture_invariants.rs
crates/satelle-transport/: Cargo.toml
crates/satelle-transport/src/: client-events-tests.rs  client-events.rs  client.rs  contract.rs  lib.rs  transport-tls.rs
crates/satelle-transport/src/contract/: error.rs  events.rs  logs.rs  read.rs  session.rs  setup.rs
crates/satelle-transport/src/server/: api_json.rs  auth.rs  event-sequence-tests.rs  events.rs  host_error.rs  listener.rs  logs.rs  mod.rs  sessions.rs  setup.rs
crates/satelle-transport/tests/: http.rs
crates/satelle-transport/tests/http/: conformance.rs  desktop-sessions.rs  event-client.rs  events.rs  logs.rs  protocol.rs  provider-auth.rs  raw-wire.rs  sessions.rs
crates/satelle-transport/tests/http/events/: limits.rs
docs/: index.mdx  meta.json
docs/explanation/: meta.json  security-boundaries.mdx  trusted-profiles-and-yolo.mdx
docs/how-to/: connect-remote.mdx  diagnose.mdx  install-satelle.mdx  meta.json  operate-session.mdx  setup-host.mdx
docs/reference/: codex-app-server-capability-matrix.md  commands.mdx  configuration.mdx  generated-cli.mdx  meta.json  provider-auth.mdx  release-process.mdx  release-verification.mdx
docs/tutorial/: first-session.mdx  meta.json
npm/release-tooling/: dry-run.mts  package-lock.json  package.json  tegami.mts
npm/satelle/: package.json  platforms.json
npm/satelle-darwin-arm64/: package.json
npm/satelle-darwin-x64/: package.json
npm/satelle-linux-arm64-gnu/: package.json
npm/satelle-linux-x64-gnu/: package.json
npm/satelle-unscoped/: package.json
npm/satelle-win32-arm64-msvc/: package.json
npm/satelle-win32-x64-msvc/: package.json
npm/satelle/lib/: launcher.cjs
npm/scripts/: npm-candidate-publication.cjs  npm-promotion.cjs  release.cjs  verify-native-package.cjs
npm/test/: npm-distribution.test.cjs  package-managers.test.cjs  release-followup.test.cjs  release-infrastructure.test.cjs
scripts/: install.ps1  install.sh
skills/satelle/: SKILL.md
skills/satelle-recover/: SKILL.md
skills/satelle-recover/agents/: openai.yaml
skills/satelle-setup/: SKILL.md
skills/satelle-setup/agents/: openai.yaml
skills/satelle-use/: SKILL.md
skills/satelle-use/agents/: openai.yaml
skills/satelle/agents/: openai.yaml
website/: mdx-components.tsx  next.config.mjs  package.json  tsconfig.json
website/app/: layout.tsx  page.tsx
website/app/docs/: layout.tsx
website/app/docs/[[...slug]]/: page.tsx
website/scripts/: docs-contract.mjs
