[workspace]
members = [
    "crates/satelle-cli",
    "crates/satelle-core",
    "crates/satelle-host",
    "crates/satelle-transport",
]
exclude = ["vendor/command-group"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
base64 = "0.22.1"
command-group = "5.0.1"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio", "ws"] }
clap = { version = "4.5.52", features = ["derive", "env"] }
clap_complete = "4.6.7"
cliclack = "0.5.4"
directories = "6.0.0"
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
getrandom = "0.4.3"
hmac = "0.13.0"
http-body-util = "0.1.3"
rusqlite = { version = "=0.40.1", default-features = false, features = ["backup", "bundled"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "query", "rustls"] }
rustls = "0.23.41"
rustix = { version = "1.1.4", features = ["fs", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
subtle = "2.6.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
toml = "0.9.8"
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v7"] }
url = "2.5.7"
windows-sys = { version = "=0.61.2", default-features = false }
zeroize = "1.9.0"

[patch.crates-io]
# command-group 5.0.1 leaks a suspended Windows child when job assignment
# fails. Keep the upstream API but vendor the lifecycle fix until it is
# released upstream.
command-group = { path = "vendor/command-group" }
