[package]
name = "satelle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = ["satelle-core/test-support", "satelle-host/test-support"]

[dependencies]
clap.workspace = true
cliclack.workspace = true
satelle-core = { path = "../satelle-core" }
satelle-host = { path = "../satelle-host" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
toml.workspace = true

[[bin]]
name = "satelle"
path = "src/main.rs"

[[test]]
name = "cli"
path = "tests/cli.rs"
required-features = ["test-support"]

[[test]]
name = "output-format-contract"
path = "tests/output-format-contract.rs"
required-features = ["test-support"]

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
serde_json.workspace = true
tempfile.workspace = true
