[package]
name = "satelle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = ["satelle-core/test-support", "satelle-host/test-support"]

[dependencies]
clap.workspace = true
clap_complete.workspace = true
cliclack.workspace = true
rmcp.workspace = true
satelle-core = { path = "../satelle-core" }
satelle-host = { path = "../satelle-host" }
satelle-transport = { path = "../satelle-transport" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[[bin]]
name = "satelle"
path = "src/main.rs"

[[test]]
name = "cli"
path = "tests/cli.rs"
required-features = ["test-support"]

[[test]]
name = "output-format-contract"
path = "tests/output-format-contract.rs"
required-features = ["test-support"]

[[test]]
name = "report-schema-contract"
path = "tests/report-schema-contract.rs"
required-features = ["test-support"]

[[test]]
name = "config-profiles"
path = "tests/config-profiles.rs"
required-features = ["test-support"]

[[test]]
name = "session-host-routing"
path = "tests/session-host-routing.rs"
required-features = ["test-support"]

[[test]]
name = "mcp"
path = "tests/mcp.rs"
required-features = ["test-support"]

[dev-dependencies]
assert_cmd = "2.1.1"
flate2 = "1.1.9"
jsonschema = { version = "0.47.0", default-features = false }
predicates = "3.1.3"
serde_json.workspace = true
tar = { version = "0.4.46", default-features = false }
tokio-tungstenite.workspace = true
# Deflate is enabled only to generate the ordinary compressed fixture. Verification reads metadata
# through by_index_raw, so the archive contract does not constrain compression methods.
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
