[package]
name = "satelle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = ["satelle-core/test-support", "satelle-host/test-support"]

[dependencies]
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
cliclack.workspace = true
flate2.workspace = true
notify.workspace = true
rmcp.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rustix.workspace = true
satelle-core = { path = "../satelle-core" }
satelle-host = { path = "../satelle-host" }
satelle-transport = { path = "../satelle-transport" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
time.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[[bin]]
name = "satelle"
path = "src/main.rs"

[[test]]
name = "cli"
path = "tests/cli.rs"
required-features = ["test-support"]

[[test]]
name = "output-format-contract"
path = "tests/output-format-contract.rs"
required-features = ["test-support"]

[[test]]
name = "report-schema-contract"
path = "tests/report-schema-contract.rs"
required-features = ["test-support"]

[[test]]
name = "config-profiles"
path = "tests/config-profiles.rs"
required-features = ["test-support"]

[[test]]
name = "session-host-routing"
path = "tests/session-host-routing.rs"
required-features = ["test-support"]

[[test]]
name = "command-history"
path = "tests/command-history.rs"
required-features = ["test-support"]

[[test]]
name = "mcp"
path = "tests/mcp.rs"
required-features = ["test-support"]

[dev-dependencies]
assert_cmd = "2.1.1"
jsonschema = { version = "0.47.0", default-features = false }
predicates = "3.1.3"
rcgen = "=0.14.8"
satelle-core = { path = "../satelle-core", features = ["test-support"] }
satelle-host = { path = "../satelle-host", features = ["test-support"] }
satelle-test-contract = { path = "../satelle-test-contract" }
serde_json.workspace = true
tokio-tungstenite.workspace = true
