[package]
name = "satelle-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = []

[dependencies]
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
uuid.workspace = true
