[package]
name = "satelle-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = ["satelle-core/test-support", "dep:tempfile"]

[dependencies]
base64.workspace = true
getrandom.workspace = true
hmac.workspace = true
rusqlite.workspace = true
satelle-core = { path = "../satelle-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
tempfile.workspace = true
