[package]
name = "satelle-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
rustls.workspace = true
satelle-core = { path = "../satelle-core" }
satelle-host = { path = "../satelle-host" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
rcgen = "=0.14.8"
satelle-host = { path = "../satelle-host", features = ["test-support"] }
