[package]
name = "satelle-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
satelle-core = { path = "../satelle-core" }
satelle-host = { path = "../satelle-host" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
uuid.workspace = true
x509-parser.workspace = true
zeroize.workspace = true

[dev-dependencies]
base64.workspace = true
rcgen = "=0.14.8"
reqwest = { workspace = true, features = ["http2", "stream"] }
satelle-host = { path = "../satelle-host", features = ["test-support"] }
satelle-test-contract = { path = "../satelle-test-contract" }
sha2.workspace = true
